--- a/app/globals.css
+++ b/app/globals.css
@@ -2,26 +2,66 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+* {
+   margin : 0;
+   padding : 0;
+   box-sizing: border-box;
+   font-family: 'Gilroy';
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+html, body {
+   height: 100%;
+   width: 100%;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+.main{
+  height: 100vh;
+  width: 100vw;
+  background-image: url('https://images.unsplash.com/photo-1619441207978-3d326c46e2c9?w=800&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTl8fHNjZW5lcnl8ZW58MHx8MHx8fDA%3D');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: bottom;
+}
+
+video{
+  object-fit: cover;
+  height: 100%;
+  width: 100%;
+}
+
+h1{
+  color: white;
+  text-align: center;
+}
+
+#name{
+  font-size: 5rem;
+}
+
+#portfolio{
+  font-size: 3rem;
+}
+
+#soon{
+  font-size:11rem;
+  margin-top: 18vh;
+  font-weight: bold;
+  /* margin-left: 20vh; */
+  color: rgb(93, 93, 93);
+  text-shadow: 5px -5px antiquewhite;
+  /* background-color: rgba(237, 237, 237, 0.079); */
+}
+
+hr{
+  width: 55%;
+  margin: 0 auto;
+}
+
+#one{
+  text-shadow: -5px -5px antiquewhite;
+}
+
+#two{
+  text-shadow: 0px 0px antiquewhite;
+  color:yellowgreen;
 }
