--- a/app/globals.css
+++ b/app/globals.css
@@ -65,3 +65,26 @@ hr{
   text-shadow: 0px 0px antiquewhite;
   color:yellowgreen;
 }
+
+@media (max-width: 1400px){
+  #name{
+    font-size:3rem;
+  }
+  #portfolio{
+    font-size: 2rem;
+  }
+  #soon{
+    font-size:5rem;
+    margin-top: 25vh;
+    color: white;
+    text-shadow: none;
+  }
+  #one{
+    color: white;
+    text-shadow: none;
+  }
+  #two{
+    color: white;
+    text-shadow: none;
+  }
+}
